--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/users.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/users.html
@@ -10,8 +10,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 <script type="text/javascript" src="/js/configuration/users/viewController.js"></script>
-<!-- <script type="text/javascript" src="/js/configuration/users/listController.js"></script>
-<script type="text/javascript" src="/js/configuration/users/createController.js"></script> -->
+<script type="text/javascript" src="/js/configuration/users/listController.js"></script>
+<!-- <script type="text/javascript" src="/js/configuration/users/createController.js"></script> -->
 <script type="text/javascript">
 /*<![CDATA[*/
 angular.module('cinnamon')
@@ -39,6 +39,6 @@ angular.module('cinnamon')
 </head>
 
 <body layout:fragment="content">
-	<ui-view />
+	<ui-view layout-fill=""/>
 </body>
 </html>
