사용자 메누 개발중 레이아웃 메뉴 rest 개발중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -1,7 +1,7 @@
 <md-content>
 	
 		<md-list>
-			<md-list-item ng-repeat="domain in domains.content" ui-sref="view">
+			<md-list-item ng-repeat="domain in domains.content" ui-sref="view({userId:domain.userId})">
 				<div layout="column">
 					<b>{{domain.name}}</b>
 					<small>{{domain.userId}}</small>
