--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
@@ -1,5 +1,16 @@
 <md-content>
-	
+	<md-card layout-fill="">
+		<md-card-title>
+			<md-card-title-text>
+				<span class="md-headline">{{domain.name}}</span>
+			</md-card-title-text>
+		</md-card-title>
+		
+	</md-card>
+	<md-tabs>
+		<md-tab label="요약">
+		</md-tab>
+	</md-tabs>
 	
 	
 </md-content>
