--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
@@ -89,70 +89,76 @@ angular.module('cinnamon')
 
 	<md-tabs md-selected="selectedStep" md-dynamic-height="true">
 		<md-tab label="초기화 시작">
-			<p>시스템 초기화를 시작합니다.</p>
-			<md-button class="md-raised md-primary" ng-click="next()">
-				<md-icon md-font-icon="play_arrow"></md-icon> 초기화 시작
-			</md-button>
+			<md-content layout-padding="">
+				<p>시스템 초기화를 시작합니다.</p>
+				<md-button class="md-raised md-primary" ng-click="next()">
+					<md-icon md-font-icon="play_arrow"></md-icon> 초기화 시작
+				</md-button>
+			</md-content>
 		</md-tab>
 		<md-tab label="기본 데이터 생성">
-			<p>시스템 구동에 필요한 기본 데이터를 생성합니다.</p>
-			
-			<md-button class="md-raised md-primary" ng-click="createBaseData()">
-				<i class="fa fa-database"></i> 기본 데이터 생성
-			</md-button>
+			<md-content layout-padding="">
+				<p>시스템 구동에 필요한 기본 데이터를 생성합니다.</p>
+				
+				<md-button class="md-raised md-primary" ng-click="createBaseData()">
+					<i class="fa fa-database"></i> 기본 데이터 생성
+				</md-button>
+			</md-content>
 		</md-tab>
 		<md-tab label="최초 사용자 생성">
-			<p>최초로 로그인할 사용자 계정을 생성합니다.</p>
-			
-			<form name="firstUserform" ng-submit="createFirstUser(firstUserform)" novalidate="novalidate">
-				<md-input-container class="md-block">
-					<label>이름</label>
-					<input name="name" ng-model="domain.name" required="required" md-maxlength="50" maxlength="50" />
-					<div ng-messages="firstUserform.name.$submitted">
-						<div ng-message="required" ng-show="firstUserform.name.$error.required">필수 입력 항목입니다.</div>
-					</div>
-				</md-input-container>
+			<md-content layout-padding="">
+				<p>최초로 로그인할 사용자 계정을 생성합니다.</p>
 				
-				<md-input-container class="md-block">
-					<label>user ID</label>
-					<input name="userId" ng-model="domain.userId" required="required" md-maxlength="20" maxlength="20" minlength="6" />
-					<div ng-messages="firstUserform.userId.$submitted">
-						<div ng-message="required" ng-show="firstUserform.userId.$error.required">필수 입력 항목입니다.</div>
-						<div ng-message="required" ng-show="firstUserform.userId.$error.minlength">최소 6자리 이상 입력하시기 바랍니다.</div>
-					</div>
-				</md-input-container>
-				
-				<md-input-container class="md-block">
-					<label>이메일</label>
-					<input type="email" name="email" ng-model="domain.email" required="required" md-maxlength="200" maxlength="200" />
-					<div ng-messages="firstUserform.email.$submitted">
-						<div ng-message="required" ng-show="firstUserform.email.$error.required">필수 입력 항목입니다.</div>
-						<div ng-message="email" ng-show="firstUserform.email.$error.email">이메일 형식을 입력하시기 바랍니다.</div>
-					</div>
-				</md-input-container>
-				
-				<md-input-container class="md-block">
-					<label>비밀번호</label>
-					<input type="password" name="password" ng-model="domain.password" required="required" md-maxlength="50" maxlength="50" minlength="6" />
-					<div ng-messages="firstUserform.password.$submitted">
-						<div ng-message="required" ng-show="firstUserform.password.$error.required">필수 입력 항목입니다.</div>
-						<div ng-message="required" ng-show="firstUserform.password.$error.minlength">최소 6자리 이상 입력하시기 바랍니다.</div>
-					</div>
-				</md-input-container>
-				
-				<md-input-container class="md-block">
-					<label>비밀번호 확인</label>
-					<input type="password" name="password2" ng-model="domain.password2" required="required" md-maxlength="50" maxlength="50" />
-					<div ng-messages="firstUserform.password2.$dirty">
-						<div ng-message="required" ng-show="firstUserform.password2.$error.required">필수 입력 항목입니다.</div>
-						<div ng-message="required" ng-show="domain.password != domain.password2">비밀번호가 일치하지 않습니다.</div>
-					</div>
-				</md-input-container>
-				
-				<md-button class="md-raised md-primary" type="submit">
-					<i class="fa fa-database"></i> 최초 사용자 생성
-				</md-button>
-			</form>
+				<form name="firstUserform" ng-submit="createFirstUser(firstUserform)" novalidate="novalidate">
+					<md-input-container class="md-block">
+						<label>이름</label>
+						<input name="name" ng-model="domain.name" required="required" md-maxlength="50" maxlength="50" />
+						<div ng-messages="firstUserform.name.$submitted">
+							<div ng-message="required" ng-show="firstUserform.name.$error.required">필수 입력 항목입니다.</div>
+						</div>
+					</md-input-container>
+					
+					<md-input-container class="md-block">
+						<label>user ID</label>
+						<input name="userId" ng-model="domain.userId" required="required" md-maxlength="20" maxlength="20" minlength="6" />
+						<div ng-messages="firstUserform.userId.$submitted">
+							<div ng-message="required" ng-show="firstUserform.userId.$error.required">필수 입력 항목입니다.</div>
+							<div ng-message="required" ng-show="firstUserform.userId.$error.minlength">최소 6자리 이상 입력하시기 바랍니다.</div>
+						</div>
+					</md-input-container>
+					
+					<md-input-container class="md-block">
+						<label>이메일</label>
+						<input type="email" name="email" ng-model="domain.email" required="required" md-maxlength="200" maxlength="200" />
+						<div ng-messages="firstUserform.email.$submitted">
+							<div ng-message="required" ng-show="firstUserform.email.$error.required">필수 입력 항목입니다.</div>
+							<div ng-message="email" ng-show="firstUserform.email.$error.email">이메일 형식을 입력하시기 바랍니다.</div>
+						</div>
+					</md-input-container>
+					
+					<md-input-container class="md-block">
+						<label>비밀번호</label>
+						<input type="password" name="password" ng-model="domain.password" required="required" md-maxlength="50" maxlength="50" minlength="6" />
+						<div ng-messages="firstUserform.password.$submitted">
+							<div ng-message="required" ng-show="firstUserform.password.$error.required">필수 입력 항목입니다.</div>
+							<div ng-message="required" ng-show="firstUserform.password.$error.minlength">최소 6자리 이상 입력하시기 바랍니다.</div>
+						</div>
+					</md-input-container>
+					
+					<md-input-container class="md-block">
+						<label>비밀번호 확인</label>
+						<input type="password" name="password2" ng-model="domain.password2" required="required" md-maxlength="50" maxlength="50" />
+						<div ng-messages="firstUserform.password2.$dirty">
+							<div ng-message="required" ng-show="firstUserform.password2.$error.required">필수 입력 항목입니다.</div>
+							<div ng-message="required" ng-show="domain.password != domain.password2">비밀번호가 일치하지 않습니다.</div>
+						</div>
+					</md-input-container>
+					
+					<md-button class="md-raised md-primary" type="submit">
+						<i class="fa fa-database"></i> 최초 사용자 생성
+					</md-button>
+				</form>
+			</md-content>
 		</md-tab>
 	</md-tabs>
 	
