--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
@@ -12,18 +12,18 @@
 <meta name="_csrf_header" th:content="${_csrf.headerName}" th:if="${_csrf != null}" />
 
 <!-- <link href="/webjars/bootstrap/3.3.6/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" /> -->
-<link href="/webjars/angular-material/1.0.3/angular-material.css" rel="stylesheet" type="text/css" />
+<link href="/webjars/angular-material/1.0.4/angular-material.css" rel="stylesheet" type="text/css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" />
 <link href="/webjars/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-<link href="/webjars/angular-material-data-table/0.9.8/dist/md-data-table.min.css" rel="stylesheet" type="text/css" />
+<!-- <link href="/webjars/angular-material-data-table/0.9.8/dist/md-data-table.min.css" rel="stylesheet" type="text/css" /> -->
 
 <script src="/webjars/angular/1.5.0-rc.1/angular.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-animate/1.5.0-rc.1/angular-animate.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-aria/1.5.0-rc.1/angular-aria.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-messages/1.5.0-rc.0/angular-messages.min.js" type="text/javascript"></script>
-<script src="/webjars/angular-material/1.0.3/angular-material.min.js" type="text/javascript"></script>
+<script src="/webjars/angular-material/1.0.4/angular-material.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-ui-router/0.2.15/release/angular-ui-router.min.js" type="text/javascript"></script>
-<script src="/webjars/angular-material-data-table/0.9.8/dist/md-data-table.min.js" type="text/javascript"></script>
+<!-- <script src="/webjars/angular-material-data-table/0.9.8/dist/md-data-table.min.js" type="text/javascript"></script> -->
 <!-- <script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.14.3/ui-bootstrap.min.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.14.3/ui-bootstrap-tpls.min.js"></script> -->
 
