--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
@@ -7,10 +7,86 @@
 		</md-card-title>
 		
 	</md-card>
-	<md-tabs>
-		<md-tab label="요약">
+	<!-- <md-tabs md-dynamic-height="true">
+		<md-tab label="개요"> -->
+			<md-card>
+				<md-card-header>
+					<md-card-header-text>
+						<span class="md-title">개인정보</span>
+					</md-card-header-text>
+				</md-card-header>
+				
+				
+				<md-list layout-padding="">
+					<md-list-item>
+						<div class="md-list-item-text" layout="column">
+							<span class="md-title">이름</span>
+							<p class="md-subhead">{{domain.name}}</p>
+						</div>
+					</md-list-item>
+					<md-list-item>
+						<div class="md-list-item-text" layout="column">
+							<span class="md-title">userId</span>
+							<p class="md-subhead">{{domain.userId}}</p>
+						</div>
+					</md-list-item>
+					<md-list-item>
+						<div class="md-list-item-text" layout="column">
+							<span class="md-title">이메일</span>
+							<p class="md-subhead">{{domain.email}}</p>
+						</div>
+					</md-list-item>
+					<md-list-item>
+						<div class="md-list-item-text" layout="column">
+							<span class="md-title">거주지</span>
+							<p class="md-subhead">{{domain.location}}</p>
+						</div>
+					</md-list-item>
+					<md-list-item>
+						<div class="md-list-item-text" layout="column">
+							<span class="md-title">직업</span>
+							<p class="md-subhead">{{domain.job}}</p>
+						</div>
+					</md-list-item>
+					<md-list-item>
+						<div class="md-list-item-text" layout="column">
+							<span class="md-title">연락처</span>
+							<p class="md-subhead">{{domain.tel}}</p>
+						</div>
+					</md-list-item>
+					<md-list-item>
+						<div class="md-list-item-text" layout="column">
+							<span class="md-title">핸드폰</span>
+							<p class="md-subhead">{{domain.phone}}</p>
+						</div>
+					</md-list-item>
+				</md-list>
+			</md-card>
+		<!-- </md-tab>
+		<md-tab label="사용자 모임">
 		</md-tab>
-	</md-tabs>
+	</md-tabs> -->
+		
+		<md-card>
+			<md-card-header>
+				<md-card-header-text>
+					<span class="md-title">사용자 모임</span>
+				</md-card-header-text>
+			</md-card-header>
+		</md-card>
 	
 	
+	<md-fab-speed-dial md-open="fabOpen" class="md-fab-top-right md-scale">
+		<md-fab-trigger>
+			<md-button class="md-fab md-warn">
+				<md-icon>add</md-icon>
+			</md-button>
+		</md-fab-trigger>
+		<md-fab-actions>
+			<md-button class="md-fab md-warn md-raised md-mini">
+				<md-tooltip>사용자 모임 등록</md-tooltip>
+				<md-icon>group</md-icon>
+			</md-button>
+		</md-fab-actions>
+	</md-fab-speed-dial>
 </md-content>
