사용자 상세 개발중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
@@ -91,7 +91,7 @@ angular.module('cinnamon')
 	<md-tabs md-selected="selectedStep" md-dynamic-height="true">
 		<md-tab label="초기화 시작">
 			<md-content layout-padding="">
-				<p>시스템 초기화를 시작합니다.</p>
+				<p class="alert-info">시스템 초기화를 시작합니다.</p>
 				<md-button class="md-raised md-primary" ng-click="next()">
 					<md-icon md-font-icon="play_arrow"></md-icon> 초기화 시작
 				</md-button>
@@ -99,7 +99,7 @@ angular.module('cinnamon')
 		</md-tab>
 		<md-tab label="기본 데이터 생성">
 			<md-content layout-padding="">
-				<p>시스템 구동에 필요한 기본 데이터를 생성합니다.</p>
+				<p class="alert-info">시스템 구동에 필요한 기본 데이터를 생성합니다.</p>
 				
 				<md-button class="md-raised md-primary" ng-click="createBaseData()">
 					<i class="fa fa-database"></i> 기본 데이터 생성
@@ -108,7 +108,7 @@ angular.module('cinnamon')
 		</md-tab>
 		<md-tab label="최초 사용자 생성">
 			<md-content layout-padding="">
-				<p>최초로 로그인할 사용자 계정을 생성합니다.</p>
+				<p class="alert-info">최초로 로그인할 사용자 계정을 생성합니다.</p>
 				
 				<form name="firstUserform" ng-submit="createFirstUser(firstUserform, $event)" novalidate="novalidate">
 					<md-input-container class="md-block">
