--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
@@ -11,7 +11,7 @@
 <meta name="_csrf" th:content="${_csrf.token}" th:if="${_csrf != null}" />
 <meta name="_csrf_header" th:content="${_csrf.headerName}" th:if="${_csrf != null}" />
 
-<!-- <link href="/webjars/bootstrap/3.3.6/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" /> -->
+<link href="/webjars/bootstrap/3.3.6/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <link href="/webjars/angular-material/1.0.4/angular-material.css" rel="stylesheet" type="text/css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" />
 <link href="/webjars/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
