--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -23,12 +23,11 @@
 		</div>
 	</md-toolbar>
 	<div flex="" layout="row">
-		<md-sidenav class="md-whiteframe-z2" md-is-locked-open="true">
-			<!-- <md-toolbar>
+		<md-sidenav class="md-whiteframe-z2" md-is-locked-open="$mdMedia('gt-sm')">
+			<md-toolbar>
 				<div class="md-toolbar-tools">
-					<h2>Web console</h2>
 				</div>
-			</md-toolbar> -->
+			</md-toolbar>
 			
 			
 			<md-list>
