--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
@@ -3,6 +3,7 @@
 		<md-card-title>
 			<md-card-title-text>
 				<span class="md-headline">{{domain.name}}</span>
+				<span class="md-subhead">{{domain.job}}</span>
 			</md-card-title-text>
 		</md-card-title>
 		
@@ -11,13 +12,42 @@
 		<md-tab label="개요"> -->
 			<md-card>
 				<md-card-header>
-					<md-card-header-text>
+					<md-card-header-text layout="row">
 						<span class="md-title">개인정보</span>
 					</md-card-header-text>
 				</md-card-header>
 				
+				<md-content>
+					<table class="table table-hover">
+						<tr>
+							<th>이름</th>
+							<td>{{domain.name}}</td>
+						</tr>
+						<tr>
+							<th>이메일</th>
+							<td>{{domain.email}}</td>
+						</tr>
+						<tr>
+							<th>거주지</th>
+							<td>{{domain.location}}</td>
+						</tr>
+						<tr>
+							<th>직업</th>
+							<td>{{domain.job}}</td>
+						</tr>
+						<tr>
+							<th>전화</th>
+							<td>{{domain.tel}}</td>
+						</tr>
+						<tr>
+							<th>핸드폰</th>
+							<td>{{domain.phone}}</td>
+						</tr>
+					</table>
+				</md-content>
 				
-				<md-list layout-padding="">
+				
+				<!-- <md-list layout-padding="">
 					<md-list-item>
 						<div class="md-list-item-text" layout="column">
 							<span class="md-title">이름</span>
@@ -60,7 +90,7 @@
 							<p class="md-subhead">{{domain.phone}}</p>
 						</div>
 					</md-list-item>
-				</md-list>
+				</md-list> -->
 			</md-card>
 		<!-- </md-tab>
 		<md-tab label="사용자 모임">
@@ -78,12 +108,12 @@
 	
 	<md-fab-speed-dial md-open="fabOpen" class="md-fab-top-right md-scale">
 		<md-fab-trigger>
-			<md-button class="md-fab md-warn">
+			<md-button class="md-fab md-accent">
 				<md-icon>add</md-icon>
 			</md-button>
 		</md-fab-trigger>
 		<md-fab-actions>
-			<md-button class="md-fab md-warn md-raised md-mini">
+			<md-button class="md-fab md-accent md-raised md-mini" ui-serf="registUserGroup({userId:domain.userId})">
 				<md-tooltip>사용자 모임 등록</md-tooltip>
 				<md-icon>group</md-icon>
 			</md-button>
