임시 사용자 데이터 추가 사용자리스트 개발중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
@@ -9,6 +9,8 @@
 <head>
 <title>초기화</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link href="/css/cinnamon.css" rel="stylesheet" type="text/css" />
+
 
 <script type="text/javascript" src="/js/main.js"></script>
 <!-- <script type="text/javascript" src="/js/configuration/initWizard/welcome.js"></script>
@@ -79,12 +81,12 @@ angular.module('cinnamon')
 <base href="/" />
 </head>
 
-<body layout:fragment="body">
+<body layout:fragment="body" style="background-color: #ecf0f5">
 <md-toolbar>
 	<h3>Web console 시스템 초기화</h3>
 </md-toolbar>
 	
-<md-content ng-cloak="" ng-controller="wizardController">
+<md-content ng-cloak="" ng-controller="wizardController" class="container" style="background-color: #ecf0f5">
 
 	<md-card>
 
