--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
@@ -38,6 +38,7 @@ angular.module('cinnamon');
 				<md-card-actions>
 					<md-button type="submit" class="md-raised md-primary">로그인</md-button>
 					<md-button>회원가입</md-button>
+					<md-button>비밀번호 변경</md-button>
 				</md-card-actions>
 			</md-card>
 		</form>
