--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -1,13 +1,21 @@
 <md-content>
+	<md-card>
 	
+	</md-card>
+	
+	<md-card>
+		<md-card-header>
+		</md-card-header>
 		<md-list>
 			<md-list-item ng-repeat="domain in domains.content" ui-sref="view({userId:domain.userId})">
 				<div layout="column">
 					<b>{{domain.name}}</b>
 					<small>{{domain.userId}}</small>
 				</div>
+				<md-divider></md-divider>
 			</md-list-item>
 		</md-list>
+	</md-card>
 	
 	<!-- <md-card>
 	
