--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
@@ -17,7 +17,7 @@
 					</md-card-header-text>
 				</md-card-header>
 				
-				<md-content>
+				<md-content layout-padding="">
 					<table class="table table-hover">
 						<tr>
 							<th>이름</th>
