--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -26,9 +26,16 @@
 			<md-button class="md-icon-button">
 				<md-icon>person</md-icon>
 			</md-button>
-			<md-button class="md-icon-button">
-				<md-icon>more_vert</md-icon>
-			</md-button>
+			<md-menu>
+				<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
+					<md-icon>more_vert</md-icon>
+				</md-button>
+				<md-menu-content>
+					<md-menu-item>
+						<md-button>설정</md-button>
+					</md-menu-item>
+				</md-menu-content>
+			</md-menu>
 		</div>
 		
 	</md-toolbar>
