--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
@@ -18,13 +18,22 @@ angular.module('cinnamon');
 <body layout:fragment="body" layout-gt-xs="row" layout-align-gt-xs="center start">
 
 	<md-content flex-gt-xs="50">
+		
 		<form th:action="@{/login}" method="post">
-			<md-card>
+			<md-card layout-padding="">
 				<md-card-header>
 					<md-card-header-text>
 						<span class="md-title">Web Console 로그인</span>
 					</md-card-header-text>
 				</md-card-header>
+				
+				<p th:if="${param.error}" class="alert-danger animated fadeIn">
+					아이디나 비밀번호가 일치하지 않습니다.
+				</p>
+				<div th:if="${param.logout}" class="alert-success animated fadeIn">
+					로그아웃되었습니다.
+				</div>
+				
 				<md-card-content>
 						<md-input-container class="md-block">
 							<label>userId</label>
@@ -34,6 +43,8 @@ angular.module('cinnamon');
 							<label>비밀번호</label>
 							<input type="password" name="password" />
 						</md-input-container>
+						<md-checkbox name="remember-me">로그인 상태 유지</md-checkbox>
+						<!-- <input type="hidden" name="remember-me" value="{{rememberMe}}" /> -->
 				</md-card-content>
 				<md-card-actions>
 					<md-button type="submit" class="md-raised md-primary">로그인</md-button>
