사용자 관리 페이지 개발중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -72,4 +72,12 @@
 		
 	</md-card> -->
 	
+	<md-fab-speed-dial md-open="fabOpen" class="md-fab-top-right md-scale">
+		<md-fab-trigger>
+			<md-button class="md-fab md-accent">
+				<md-tooltip md-direction="left">사용자 생성</md-tooltip>
+				<md-icon>add</md-icon>
+			</md-button>
+		</md-fab-trigger>
+	</md-fab-speed-dial>
 </md-content>
