--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
@@ -39,27 +39,27 @@
 					<table class="table table-hover">
 						<tr>
 							<th>이름</th>
-							<td>{{domain.name}}</td>
+							<td class="text-muted">{{domain.name}}</td>
 						</tr>
 						<tr>
 							<th>이메일</th>
-							<td>{{domain.email}}</td>
+							<td class="text-muted">{{domain.email}}</td>
 						</tr>
 						<tr>
 							<th>거주지</th>
-							<td>{{domain.location}}</td>
+							<td class="text-muted">{{domain.location}}</td>
 						</tr>
 						<tr>
 							<th>직업</th>
-							<td>{{domain.job}}</td>
+							<td class="text-muted">{{domain.job}}</td>
 						</tr>
 						<tr>
 							<th>전화</th>
-							<td>{{domain.tel}}</td>
+							<td class="text-muted">{{domain.tel}}</td>
 						</tr>
 						<tr>
 							<th>핸드폰</th>
-							<td>{{domain.phone}}</td>
+							<td class="text-muted">{{domain.phone}}</td>
 						</tr>
 					</table>
 				</md-content>
