--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -1,10 +1,51 @@
 <md-content>
-	<md-card>
 	
-	</md-card>
+		
+		<md-list class="md-whiteframe-2dp" layout-fill="">
+		
+<!-- <md-list-item class="md-3-line" ng-repeat="domain in domains.content" ui-sref="view({userId:domain.userId})">
+        <div class="md-list-item-text">
+          <h3>{{domain.name}}</h3>
+          <h4>{{domain.email}}</h4>
+          <p>{{domain.tel}}</p>
+        </div>
+        <md-button class="md-secondary">Respond</md-button>
+        <md-divider ng-if="!$last"></md-divider>
+      </md-list-item> -->
+		
+			<md-list-item ng-repeat="domain in domains.content" ui-sref="view({userId:domain.userId})" layout="row">
+				<div class="md-list-item-text">
+					<b flex="30">{{domain.name}}</b>
+					<span class="text-muted" flex="30">{{domain.email}}</span>
+					<span class="text-muted" flex="30">{{domain.tel}}</span>
+				</div>
+			</md-list-item>
+		</md-list>
+		
 	
-	<md-card>
+	
+	<!-- <md-card>
 		<md-card-header>
+			<md-card-header-text class="md-headline">사용자</md-card-header-text>
+			
+		</md-card-header>
+			<md-list>
+				<md-list-item ng-repeat="domain in domains.content" ui-sref="view({userId:domain.userId})" layout="row">
+					<div layout="column" class="md-list-item-text">
+						<b>{{domain.name}}</b>
+						<small class="text-muted">{{domain.email}}</small>
+					</div>
+					<md-divider></md-divider>
+				</md-list-item>
+			</md-list>
+	</md-card> -->
+	
+	
+	<!-- <md-card>
+		<md-card-header>
+			<md-card-header-text>
+				<span class="md-title">사용자</span>
+			</md-card-header-text>
 		</md-card-header>
 		<md-list>
 			<md-list-item ng-repeat="domain in domains.content" ui-sref="view({userId:domain.userId})">
@@ -15,7 +56,26 @@
 				<md-divider></md-divider>
 			</md-list-item>
 		</md-list>
-	</md-card>
+	</md-card> -->
+	
+	<!-- <md-table-container>
+		<table md-table="" md-row-select="" ng-model="selectedUsers">
+			<tbody md-body="">
+				<tr md-row="" md-select="domain" ng-repeat="domain in domains.content" md-auto-select="" md-on-select="onSelectUser()">
+					<td md-cell="">
+						<i class="ion-person text-muted"></i>
+					</td>
+					<td md-cell="">{{domain.userId}}</td>
+					<td md-cell="">{{domain.name}}</td>
+					<td md-cell="">
+						{{domain.email}}
+					</td>
+					<td md-cell="">{{domain.createdAt | date: 'yyyy년 MM월 dd일'}}</td>
+				</tr>
+			</tbody>
+		</table>
+	</md-table-container>
+	<md-table-pagination md-limit="domains.size" md-page="1" md-total="{{domains.totalElements}}" /> -->
 	
 	<!-- <md-card>
 	
@@ -76,7 +136,7 @@
 		<md-fab-trigger>
 			<md-button class="md-fab md-accent">
 				<md-tooltip md-direction="left">사용자 생성</md-tooltip>
-				<md-icon>add</md-icon>
+				<md-icon>person_add</md-icon>
 			</md-button>
 		</md-fab-trigger>
 	</md-fab-speed-dial>
