--- a/cinnamon-core-template/src/main/resources/templates/layout/base.html
+++ b/cinnamon-core-template/src/main/resources/templates/layout/base.html
@@ -17,14 +17,16 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
 <!-- Bootstrap -->
 <link href="/webjars/bootstrap/3.3.6/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-<link href="/webjars/bootstrap/3.3.6/dist/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css" />
-
+<!-- <link href="/webjars/bootstrap/3.3.6/dist/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css" /> -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" />
 <!-- Font Awesome Icons -->
 <link href="/webjars/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 <!-- Ionicons -->
 <link href="/webjars/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css" />
 <!-- Theme style -->
 <link href="/webjars/adminlte/2.3.2/dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
+<link href="/webjars/angular-material/1.0.4/angular-material.min.css" rel="stylesheet" type="text/css" />
+
 <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
           page. However, you can choose any other skin. Make sure you
           apply the skin class to the body tag so the changes take effect.
@@ -37,8 +39,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
 <script type="text/javascript" src="/webjars/jquery/2.1.4/dist/jquery.min.js"></script>
 <script type="text/javascript" src="/webjars/bootstrap/3.3.6/dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/webjars/angularjs/1.4.8/angular.min.js"></script>
-<script type="text/javascript" src="/webjars/angular-animate/1.4.8/angular-animate.min.js"></script>
+<script src="/webjars/angular/1.5.0-rc.1/angular.min.js" type="text/javascript"></script>
+<script src="/webjars/angular-animate/1.5.0-rc.1/angular-animate.min.js" type="text/javascript"></script>
+<script src="/webjars/angular-aria/1.5.0-rc.1/angular-aria.min.js" type="text/javascript"></script>
+<script src="/webjars/angular-messages/1.5.0-rc.0/angular-messages.min.js" type="text/javascript"></script>
+<script src="/webjars/angular-material/1.0.4/angular-material.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="/webjars/angular-ui-router/0.2.15/release/angular-ui-router.min.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.14.3/ui-bootstrap.min.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.14.3/ui-bootstrap-tpls.min.js"></script>
