--- a/cinnamon-core-web/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/partials/users/list.html
@@ -3,162 +3,79 @@
 	<section class="content-header">
 		<h1>
 			<span>사용자</span> <small>설정</small>
-			<button class="btn btn-primary btn-sm"
+			<!-- <button class="btn btn-primary btn-sm"
 				ng-bootbox-title="회원 등록"
 				ng-bootbox-custom-dialog=""
 				ng-bootbox-custom-dialog-template="/configuration/partials/users/create">
 				<i class="fa fa-plus"></i> 사용자 등록
-			</button>
+			</button> -->
 		</h1>
 	</section>
 	
+	<md-fab-speed-dial md-open="fabOpen" class="md-fab-bottom-right md-scale" style="position: fixed">
+		<md-fab-trigger>
+			<md-button class="md-fab md-accent">
+				<md-tooltip md-direction="left">사용자 생성</md-tooltip>
+				<md-icon>person_add</md-icon>
+			</md-button>
+		</md-fab-trigger>
+	</md-fab-speed-dial>
+	
+	
 	<!-- Main content -->
-	<section class="content">
+	<!-- <section class="content"> -->
 		
-		<div class="box box-solid">
-			<div class="box-body">
-				
-				<!-- <div class="form-group">
-					<button class="btn btn-primary btn-sm">
-						<i class="fa fa-plus"></i> 사용자 등록
-					</button>
-				</div> -->
-				
-				
-				<div class="form-group">
-					<div class="input-group">
-						<span class="input-group-addon input-lg">
-							<i class="fa fa-search"></i> 검색
-						</span>
-						<input type="text" class="form-control input-lg" data-ng-model="searchInfo.name" maxlength="200" />
-						<!-- <span class="input-group-btn">
-							<button class="btn btn-primary input-lg" type="button" data-ng-click="search()">
-								<i class="fa fa-search fa-lg"></i> 검색
-							</button>
-						</span> -->
-					</div>
-				</div>
-				
-				<div class="form-group">
-					<a href="" class="btn btn-default btn-sm" ng-click="showDetailSearch = !showDetailSearch">상세 검색</a>
-					<a href="" class="text-muted" data-ng-click="initSearch()" uib-tooltip="검색을 초기화 합니다.">검색취소</a>
-					<div class="btn-group pull-right" uib-dropdown="">
-						<button class="btn btn-defaulf btn-sm" uib-dropdown-toggle="">
-							정렬 <i class="fa fa-chevron-down"></i>
-						</button>
-						<ul class="uib-dropdown-menu" role="menu">
-							<li role="menuitem">
-								<a href="">userId</a>
-							</li>
-							<li role="menuitem" class="active">
-								<a href=""><i class="fa fa-arrow-down"></i> 이름</a>
-							</li>
-							<li class="divider"></li>
-							<li role="menuitem">
-								<a href="">초기화</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-				
-				<div ng-show="showDetailSearch" ng-class="showDetailSearch ? 'animated fadeIn': ''">
-					<div class="well well-sm">
-					
-						<div class="form-group">
-							<label class="form-label text-muted">상세 조건</label>
-						</div>
-						<div class="form-group">
-							<div class="input-group">
-								<span class="input-group-addon">
-									userId
-								</span>
-								<input type="text" class="form-control" ng-model="searchInfo.userId" maxlength="200" />
-							</div>
-						</div>
-						<div class="form-group">
-							<div class="input-group">
-								<span class="input-group-addon">
-									이메일
-								</span>
-								<input type="text" class="form-control" ng-model="searchInfo.email" maxlength="200" />
-							</div>
-						</div>
-						<div class="form-group">
-							<div class="input-group">
-								<span class="input-group-addon">
-									성별
-								</span>
-								<select ng-model="searchInfo.gender" class="form-control">
-									<option value="">선택하세요</option>
-									<option ng-repeat="(id,name) in genders" value="{{id}}">{{name}}</option>
-								</select>
-							</div>
-						</div>
-						<div class="form-group">
-							<div class="input-group">
-								<span class="input-group-addon">
-									국적
-								</span>
-								<input type="text" class="form-control" ng-model="searchInfo.nation" maxlength="200" />
-							</div>
-						</div>
-						<div class="form-group">
-							<div class="input-group">
-								<span class="input-group-addon">
-									상태
-								</span>
-								<input type="text" class="form-control" ng-model="searchInfo.useStatus" maxlength="200" />
-							</div>
-						</div>
-						
-					</div>
-				</div>
-				
-				
-				<uib-pagination
-					class="pagination-sm"
-					total-items="domains.totalElements"
-					items-per-page="domains.size"
-					boundary-links="true"
-					max-size="10"
-					ng-model="searchInfo.page"
-					ng-change="onPageChange()"
-					ng-if="domains.totalPages > 1" />
-				
-				<table class="table table-hover">
-					<tbody>
-						<tr ng-repeat="domain in domains.content">
-							<td>
-								<i class="ion-person text-muted"></i>
-							</td>
-							<td>
-								<b><a ng-href="/configuration/users/{{domain.userId}}">{{domain.userId}}</a></b>
-							</td>
-							<td>{{domain.name}}</td>
-							<td>
-								{{domain.email}}
-							</td>
-							<td class="text-muted">{{domain.createdAt | date: 'yyyy년 MM월 dd일'}}</td>
-						</tr>
-					</tbody>
-				</table>
-				<hr />
-				
-				<uib-pagination
-					class="pagination-sm"
-					total-items="domains.totalElements"
-					items-per-page="domains.size"
-					boundary-links="true"
-					max-size="10"
-					ng-model="searchInfo.page"
-					ng-change="onPageChange()" />
-				
-				
-				
-				
-			</div>
-		</div>
+	<md-content style="background: transparent">
 		
-	</section>
+		<md-card>
+			<md-card-header>
+				<md-card-header-text class="md-headline">사용자</md-card-header-text>
+				<md-button class="md-icon-button">
+					<md-tooltip md-direction="top">정렬</md-tooltip>
+					<md-icon>search</md-icon>
+				</md-button>
+				<md-button class="md-icon-button">
+					<md-tooltip md-direction="top">정렬</md-tooltip>
+					<md-icon>sort</md-icon>
+				</md-button>
+			</md-card-header>
+				<!-- <md-list>
+					<md-list-item ng-click="goView()">
+						<div layout="column" class="md-list-item-text">
+							<b>신동성</b>
+							<small class="text-muted">adrenalinee31@gmail.com</small>
+						</div>
+					</md-list-item>
+					<md-divider></md-divider>
+					<md-list-item ng-click="goView()">
+						<div layout="column" class="md-list-item-text">
+							<b>이문상</b>
+							<small class="text-muted">tlset@lycos.co.kr</small>
+						</div>
+					</md-list-item>
+					<md-divider></md-divider>
+				</md-list> -->
+				
+				
+				
+				
+				<md-list>
+					<md-divider></md-divider>
+					<md-list-item ng-repeat="domain in domains.content" ng-click="goView(domain)" layout="row">
+						<b flex="30">{{domain.name}}</b>
+						<span flex="30" class="text-muted">{{domain.email}}</span>
+						<span class="text-muted">{{domain.tel}}</span>
+						<!-- <div layout="column" class="md-list-item-text">
+							<b>{{domain.name}}</b>
+							<small class="text-muted">{{domain.email}}</small>
+						</div> -->
+						<md-divider ng-if="!$last"></md-divider>
+					</md-list-item>
+				</md-list>
+		</md-card>
+		
+	</md-content>
+	
+	<!-- </section> -->
 	<!-- /.content -->
 </aside>
