--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -1,143 +1,85 @@
-<md-content>
+<md-fab-speed-dial md-open="fabOpen" class="md-fab-bottom-right md-scale" style="position: fixed">
+	<md-fab-trigger>
+		<md-button class="md-fab md-accent">
+			<md-tooltip md-direction="left">사용자 생성</md-tooltip>
+			<md-icon>person_add</md-icon>
+		</md-button>
+	</md-fab-trigger>
+</md-fab-speed-dial>
+
+
+<md-content class="container content">
+	<h3>사용자</h3>
 	
-		
-		<md-list class="md-whiteframe-2dp" layout-fill="">
-		
-<!-- <md-list-item class="md-3-line" ng-repeat="domain in domains.content" ui-sref="view({userId:domain.userId})">
-        <div class="md-list-item-text">
-          <h3>{{domain.name}}</h3>
-          <h4>{{domain.email}}</h4>
-          <p>{{domain.tel}}</p>
-        </div>
-        <md-button class="md-secondary">Respond</md-button>
-        <md-divider ng-if="!$last"></md-divider>
-      </md-list-item> -->
-		
-			<md-list-item ng-repeat="domain in domains.content" ui-sref="view({userId:domain.userId})" layout="row">
-				<div class="md-list-item-text">
-					<b flex="30">{{domain.name}}</b>
-					<span class="text-muted" flex="30">{{domain.email}}</span>
-					<span class="text-muted" flex="30">{{domain.tel}}</span>
-				</div>
-			</md-list-item>
-		</md-list>
-		
-	
-	
-	<!-- <md-card>
-		<md-card-header>
-			<md-card-header-text class="md-headline">사용자</md-card-header-text>
-			
+	<md-card md-whiteframe="4">
+		<md-card-header layout="row">
+			<md-input-container md-no-float="true" flex="" layout-fill="">
+				<md-icon>search</md-icon>
+				<input placeholder="검색어를 입력하세요" />
+			</md-input-container>
+			<md-button class="md-icon-button" layout-margin="" ng-click="showDetailSearch = !showDetailSearch">
+				<md-tooltip md-direction="top">상세 검색</md-tooltip>
+				<md-icon>expand_more</md-icon>
+			</md-button>
+			<md-menu>
+				<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
+					<md-tooltip md-direction="top">정렬</md-tooltip>
+					<md-icon>sort</md-icon>
+				</md-button>
+				<md-menu-content>
+					<md-menu-item>
+						<md-button layout="row">
+							이름
+							<md-icon>check</md-icon>
+						</md-button>
+					</md-menu-item>
+					<md-menu-item>
+						<md-button>
+							이메일
+						</md-button>
+					</md-menu-item>
+					<md-menu-item>
+						<md-button>
+							userId
+						</md-button>
+					</md-menu-item>
+				</md-menu-content>
+			</md-menu>
 		</md-card-header>
-			<md-list>
-				<md-list-item ng-repeat="domain in domains.content" ui-sref="view({userId:domain.userId})" layout="row">
-					<div layout="column" class="md-list-item-text">
-						<b>{{domain.name}}</b>
-						<small class="text-muted">{{domain.email}}</small>
-					</div>
-					<md-divider></md-divider>
-				</md-list-item>
-			</md-list>
-	</md-card> -->
-	
-	
-	<!-- <md-card>
-		<md-card-header>
-			<md-card-header-text>
-				<span class="md-title">사용자</span>
-			</md-card-header-text>
-		</md-card-header>
-		<md-list>
-			<md-list-item ng-repeat="domain in domains.content" ui-sref="view({userId:domain.userId})">
-				<div layout="column">
+		
+		<div ng-if="showDetailSearch">
+			<md-divider></md-divider>
+			<md-card-content class="content" layout="column">
+				<md-input-container layout-fill="">
+					<label>이름</label>
+					<input />
+				</md-input-container>
+				<md-input-container layout-fill="">
+					<label>userId</label>
+					<input />
+				</md-input-container>
+				<md-input-container layout-fill="">
+					<label>이메일</label>
+					<input />
+				</md-input-container>
+			</md-card-content>
+			<md-divider></md-divider>
+		</div>
+		
+		
+		<md-list layout-fill="">
+			<md-divider></md-divider>
+			<md-list-item ng-repeat="domain in domains.content" ng-click="goView(domain)" layout="row">
+				<b flex="30">{{domain.name}}</b>
+				<span flex="30" class="text-muted">{{domain.email}}</span>
+				<span class="text-muted">{{domain.tel}}</span>
+				<!-- <div layout="column" class="md-list-item-text">
 					<b>{{domain.name}}</b>
-					<small>{{domain.userId}}</small>
-				</div>
-				<md-divider></md-divider>
+					<small class="text-muted">{{domain.email}}</small>
+				</div> -->
+				<md-divider ng-if="!$last"></md-divider>
 			</md-list-item>
 		</md-list>
-	</md-card> -->
-	
-	<!-- <md-table-container>
-		<table md-table="" md-row-select="" ng-model="selectedUsers">
-			<tbody md-body="">
-				<tr md-row="" md-select="domain" ng-repeat="domain in domains.content" md-auto-select="" md-on-select="onSelectUser()">
-					<td md-cell="">
-						<i class="ion-person text-muted"></i>
-					</td>
-					<td md-cell="">{{domain.userId}}</td>
-					<td md-cell="">{{domain.name}}</td>
-					<td md-cell="">
-						{{domain.email}}
-					</td>
-					<td md-cell="">{{domain.createdAt | date: 'yyyy년 MM월 dd일'}}</td>
-				</tr>
-			</tbody>
-		</table>
-	</md-table-container>
-	<md-table-pagination md-limit="domains.size" md-page="1" md-total="{{domains.totalElements}}" /> -->
-	
-	<!-- <md-card>
-	
-		<table class="md-table">
-			<tbody>
-				<tr ng-repeat="domain in domains.content">
-					<td>
-						<i class="ion-person text-muted"></i>
-					</td>
-					<td>
-						<b><a ng-href="/configuration/users/{{domain.userId}}">{{domain.userId}}</a></b>
-					</td>
-					<td>{{domain.name}}</td>
-					<td>
-						{{domain.email}}
-					</td>
-					<td class="text-muted">{{domain.createdAt | date: 'yyyy년 MM월 dd일'}}</td>
-				</tr>
-			</tbody>
-		</table>
-	
 	</md-card>
 	
-	
-	<md-card>
-		<md-table-container>
-			
-			<table md-table=""  md-row-select="" ng-model="selectedUsers" md-progress="promise">
-				<thead md-head="">
-					<tr md-row="">
-						<th md-column="">이름</th>
-						<th md-column="">이메일</th>
-						<th md-column="">가입 일시</th>
-					</tr>
-				</thead>
-				<tbody md-body="">
-					<tr
-						md-row=""
-						md-select="domain"
-						md-auto-select=""
-						md-on-select="selectUser"
-						md-select-id="{{domain.userId}}"
-						ng-repeat="domain in domains.content">
-						
-						<td md-cell="">{{domain.userId}}</td>
-						<td md-cell="">{{domain.email}}</td>
-						<td md-cell="">{{domain.createdAt | date: 'yyyy년 MM월 dd일'}}</td>
-					</tr>
-				</tbody>
-			</table>
-			
-		</md-table-container>
-		<md-table-pagination md-limit="domains.size" md-page="1" md-total="{{domains.totalElements}}" />
-		
-	</md-card> -->
-	
-	<md-fab-speed-dial md-open="fabOpen" class="md-fab-top-right md-scale">
-		<md-fab-trigger>
-			<md-button class="md-fab md-accent">
-				<md-tooltip md-direction="left">사용자 생성</md-tooltip>
-				<md-icon>person_add</md-icon>
-			</md-button>
-		</md-fab-trigger>
-	</md-fab-speed-dial>
 </md-content>
