--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/users.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/users.html
@@ -43,6 +43,6 @@ angular.module('cinnamon')
 </head>
 
 <body layout:fragment="content">
-	<ui-view layout-fill=""/>
+	<ui-view layout-fill="" ng-style="sidenavStyle" />
 </body>
 </html>
