--- a/cinnamon-core-web-material/src/main/resources/static/css/cinnamon.css
+++ b/cinnamon-core-web-material/src/main/resources/static/css/cinnamon.css
@@ -1,3 +1,39 @@
 /* md-content {background-color: #ecf0f5} */
+.content {
+	background-color: #f2f2f2
+}
 
-.content {background-color: #f2f2f2}
+.content-container {
+	padding-right: 5px;
+	padding-left: 5px;
+	margin-right: auto;
+	margin-left: auto;
+}
+@media (max-width : 960px) {
+	.content-container {
+		padding-right: 0px;
+		padding-left: 0px;
+		margin-right: auto;
+		margin-left: auto;
+	}
+}
+@media (min-width : 600px) {
+	.content-container {
+		max-width: 590px;
+	}
+}
+@media (min-width : 960px) {
+	.content-container {
+		max-width: 950px;
+	}
+}
+@media (min-width : 1280px) {
+	.content-container {
+		max-width: 1270px;
+	}
+}
+@media (min-width : 1920px) {
+	.content-container {
+		max-width: 1910px;
+	}
+}
