--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -18,17 +18,17 @@
 <div ng-controller="layoutController" layout="column">
 	<md-toolbar md-whiteframe="5">
 		<div class="md-toolbar-tools" layout-fill="">
-			<md-button class="md-icon-button">
-				<i class="fa fa-bars"></i>
+			<md-button class="md-icon-button" ng-click="toggleSidenav()">
+				<md-icon>menu</md-icon>
 			</md-button>
 			<h2>Web console</h2>
 			<span flex=""></span>
 			
 			<md-button class="md-icon-button">
-				<md-icon>notifications</md-icon>
+				<md-icon>notifications_none</md-icon>
 			</md-button>
 			
-			<md-menu>
+			<md-menu ng-if="!$mdMedia('gt-md')">
 				<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
 					<md-icon>person</md-icon>
 				</md-button>
@@ -57,24 +57,33 @@
 		</div>
 		
 	</md-toolbar>
-	<div flex="" layout="row">
-		<md-sidenav md-is-locked-open="$mdMedia('gt-sm')" style="background: transparent">
+	<div flex="" layout="row" class="content">
+	<!-- style="background: transparent" -->
+	<!-- md-is-locked-open="$mdMedia('gt-lg')" -->
+		<md-sidenav md-component-id="leftSidenav" md-is-locked-open="$mdMedia('gt-sm')" style="width: 230px" ng-style="sidenavStyle">
+			<md-toolbar ng-hide="isHideSidebarToolbar">
+				<div class="md-toolbar-tools">
+					<md-button class="md-icon-button" ng-click="closeSidenav()">
+						<md-icon>close</md-icon>
+					</md-button>
+				</div>
+			</md-toolbar>
 			<md-list>
-				
 				<md-list-item ng-repeat="menu in currentMenus.sidebar" ng-click="selectMenu(menu)">
-					{{menu.name}}
 					
+					{{menu.name}}
 				</md-list-item>
-				<!-- <md-list ng-if="menu.childs != 0">
+				<md-list ng-if="menu.childs != 0">
 					<md-list-item ng-repeat="childMenu in menu.childs" ng-click="selectMenu(childMenu)">
 						{{childMenu.name}}
 					</md-list-item>
-				</md-list> -->
+				</md-list>
 				
 			</md-list>
 			
 		</md-sidenav>
-		<div layout:fragment="content"></div>
+		<div layout:fragment="content">
+		</div>
 	</div>
 </div>
 </body>
