--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -8,19 +8,19 @@
 </md-fab-speed-dial>
 
 
-<md-content class="container content">
-	<h3>사용자</h3>
+<md-content class="content-container content">
+	<h3 layout-padding="" class="md-headline">사용자</h3>
 	
 	<md-card md-whiteframe="4">
-		<md-card-header layout="row">
+		<md-card-header layout="row" layout-align="center center">
+			<md-icon>search</md-icon>
 			<md-input-container md-no-float="true" flex="" layout-fill="">
-				<md-icon>search</md-icon>
-				<input placeholder="검색어를 입력하세요" />
+				<input flex="" placeholder="검색어를 입력하세요" />
 			</md-input-container>
-			<md-button class="md-icon-button" layout-margin="" ng-click="showDetailSearch = !showDetailSearch">
-				<md-tooltip md-direction="top">상세 검색</md-tooltip>
-				<md-icon>expand_more</md-icon>
-			</md-button>
+				<md-button class="md-icon-button" ng-click="showDetailSearch = !showDetailSearch">
+					<md-tooltip md-direction="top">상세 검색</md-tooltip>
+					<md-icon>expand_more</md-icon>
+				</md-button>
 			<md-menu>
 				<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
 					<md-tooltip md-direction="top">정렬</md-tooltip>
@@ -70,6 +70,9 @@
 		<md-list layout-fill="">
 			<md-divider></md-divider>
 			<md-list-item ng-repeat="domain in domains.content" ng-click="goView(domain)" layout="row">
+				<div flex="5">
+					<md-icon>face</md-icon>
+				</div>
 				<b flex="30">{{domain.name}}</b>
 				<span flex="30" class="text-muted">{{domain.email}}</span>
 				<span class="text-muted">{{domain.tel}}</span>
