--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
@@ -28,6 +28,9 @@
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.14.3/ui-bootstrap-tpls.min.js"></script> -->
 
 
+<script type="text/javascript" src="/webjars/angular-ui-bootstrap/1.1.2/src/paging/paging.js"></script>
+<script type="text/javascript" src="/webjars/angular-ui-bootstrap/1.1.2/src/pagination/pagination.js"></script>
+
 
 
 </head>
