--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
@@ -23,7 +23,7 @@ angular.module('cinnamon');
 			<md-card layout-padding="">
 				<md-card-header>
 					<md-card-header-text>
-						<span class="md-title">Web Console 로그인</span>
+						<span class="md-title">welcom to Cinnamon</span>
 					</md-card-header-text>
 				</md-card-header>
 				
