--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
@@ -1,22 +1,27 @@
-<md-content>
+<md-fab-speed-dial md-open="fabOpen" class="md-fab-bottom-right md-scale">
+	<md-fab-trigger>
+		<md-button class="md-fab md-accent">
+			<md-tooltip md-direction="left">사용자 모임 생성</md-tooltip>
+			<md-icon>group_add</md-icon>
+		</md-button>
+	</md-fab-trigger>
+</md-fab-speed-dial>
+
+
+<md-content class="content-container content">
+	<h3 layout-padding="" class="md-headline">사용자 모임</h3>
 	
-	<md-list>
-		<md-list-item ng-repeat="domain in domains.content" ui-sref="view({userGroupId:domain.userGroupId})">
-			<!-- <md-icon class="md-avatar-icon">face</md-icon> -->
-			<div layout="column" class="md-list-item-text">
-				<b>{{domain.name}}</b>
-				<small class="text-muted">{{domain.authority.name}}</small>
-			</div>
-			<md-divider></md-divider>
-		</md-list-item>
-	</md-list>
+	<cm-search-list
+		resource-url="'/rest/configuration/userGroups'"
+		on-select="goView(domain)">
+		
+		{{domain}}
+		<div flex="5">
+			<md-icon>group</md-icon>
+		</div>
+		<b flex="30">{{domain.name}}</b>
+		<span flex="30" class="text-muted">{{domain.authority.name}}</span>
+		<span class="text-muted">{{domain.createdAt}}</span>
+	</cm-search-list>
 	
-	<md-fab-speed-dial md-open="fabOpen" class="md-fab-top-right md-scale">
-		<md-fab-trigger>
-			<md-button class="md-fab md-accent">
-				<md-tooltip md-direction="left">사용자 모임 생성</md-tooltip>
-				<md-icon>group_add</md-icon>
-			</md-button>
-		</md-fab-trigger>
-	</md-fab-speed-dial>
 </md-content>
