--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/userGroups.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/userGroups.html
@@ -9,6 +9,8 @@
 <title>사용자 모임</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
+<script type="text/javascript" src="/js/configuration/directives/searchList.js"></script>
+
 <script type="text/javascript" src="/js/configuration/userGroups/viewController.js"></script>
 <script type="text/javascript" src="/js/configuration/userGroups/listController.js"></script>
 <!-- <script type="text/javascript" src="/js/configuration/users/createController.js"></script> -->
